deps/v8/test/message/fail/for-in-loop-initializers-destructuring.out
*%(basename)s:8: SyntaxError: for-in loop variable declaration may not have an initializer.
  for (var [x, y] = {} in {});
                ^^^^^^
SyntaxError: for-in loop variable declaration may not have an initializer.
